tests/fixtures/errors/multi_error_unknown.z
# multi_error_unknown.z -- one unresolved reference must not suppress the
# unit's other diagnostics (it used to abort the parse as a missing-unit
# load error before any checking ran).
main: function is {
    z: "s".nosuchmember
    x: unknownthing
    y: true + 1
}
